--- a/src/style.css
+++ b/src/style.css
@@ -25,15 +25,25 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 3em;
   line-height: 2;
   background-color: #fc909ee6;
   color: white;
   border-radius: 1000px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.267); 
+  width: auto; /* ให้ความกว้างของพื้นหลังเท่ากับข้อความ */
+  display: inline-block;
+   
+}
+.note{
+  text-align: right;
+  background-color: rgb(255, 0, 0);
+  color: white;
+  width: auto; /* ให้ความกว้างของพื้นหลังเท่ากับข้อความ */
+  display: inline-block;
 }
 
 .card {
@@ -41,13 +51,46 @@ h1 {
 }
 
 #app {
-  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   padding: 2rem;
   text-align: center;
-  background-color:#fc909e63;
+  background-image: url('https://i.pinimg.com/564x/e1/ad/47/e1ad47f6c5c1e11360eb69ccaa69a8d9.jpg'); /* เปลี่ยน URL ให้เป็น URL ของรูปภาพที่คุณต้องการใช้ */
+  background-size: cover; /* ปรับขนาดรูปภาพให้เต็มพื้นหลัง */
+  background-repeat: no-repeat; /* ไม่ต้องทำการทำซ้ำรูปภาพ */
+  /*background-attachment: fixed; /* ให้รูปภาพคงที่ตลอดการเลื่อนหน้าเว็บ */
+  background-color: rgba(0, 0, 0, 0.5); /* สีพื้นหลังสำหรับรูปภาพ */
+
 }
 
 .custom-card-bg {
   background-color: #feeabc; 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.76); 
+  
 }
+.card-container {
+  display: flex;
+  align-items: stretch;
+  margin-bottom: 20px; /* ระยะห่างระหว่างการ์ด */
+  flex: 1;
+  width: 100%;
+  height: 90%;
+  /* ระยะห่างขอบการ์ด */
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.table-caption {
+  background-color:#fbfbfb;
+  border-radius: 100px;
+  color: rgb(0, 0, 0);
+  padding: 10px; /* ปรับขนาด padding เพื่อกำหนดขนาดพื้นหลัง */
+  font-size: 20px; /* ปรับขนาดตัวอักษรตามที่ต้องการ */
+  margin-bottom: 10px; /* ระยะห่างระหว่างข้อความกับตาราง */
+  width: auto; /* ให้ความกว้างของพื้นหลังเท่ากับข้อความ */
+  display: inline-block;
+}
+
